--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^12.1.10",
     "aws-amplify": "^4.2.2",
     "bootstrap": "^5.0.2",
+    "prismjs": "^1.24.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-simple-code-editor": "^0.11.0",
     "react-table": "^7.7.0",
     "web-vitals": "^1.0.1"
   },
